--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-venv/
+ezkkook/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
