--- a/kiosk_server/requirements.txt
+++ b/kiosk_server/requirements.txt
@@ -8,6 +8,7 @@ comm==0.1.4
 debugpy==1.8.0
 decorator==5.1.1
 dj-rest-auth==6.0.0
+Django==5.0.6
 django-allauth==0.63.1
 django-cors-headers==4.3.1
 django-environ==0.11.2
@@ -30,6 +31,7 @@ packaging==23.1
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+pillow==10.3.0
 platformdirs==3.10.0
 prompt-toolkit==3.0.39
 psutil==5.9.8
