--- a/kiosk_server/requirements.txt
+++ b/kiosk_server/requirements.txt
@@ -15,6 +15,7 @@ django-environ==0.11.2
 django-restframework==0.0.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+drf-nested-routers==0.94.1
 executing==1.2.0
 idna==3.7
 ipykernel==6.25.2
